@@ -26,6 +26,7 @@ dnl Pick up the gettext, etc macros
 dnl AM_ACLOCAL_INCLUDE(macros)
 AM_GNU_GETTEXT
 
+AM_PATH_GLIB(1.2.0,,exit 1)
 AM_PATH_GTK(1.2.0,,exit 1)
 
 dnl check for qstat
@@ -59,6 +60,31 @@ esac
 QSTAT23="-DQSTAT23 -DQSTAT_HAS_UNREAL_SUPPORT"
 
 AC_SUBST(QSTAT23)
+
+dnl determine if we should include readline support...
+dnl ripped from physfs package
+AC_ARG_ENABLE(readline,
+    AC_HELP_STRING([--enable-externalrcon],[compile external rcon program (default=yes)])
+    , ,enable_rcon=yes)
+if test x$enable_rcon = xyes; then
+  AC_CHECK_HEADER(readline/readline.h, have_readline_hdr=yes)
+  AC_CHECK_LIB(readline, readline, have_readline_lib=yes, , )
+  AC_CHECK_HEADER(readline/history.h, have_history_hdr=yes)
+  AC_CHECK_LIB(readline, add_history, have_history_lib=yes, , )
+  if test x$have_readline_hdr = xyes -a x$have_readline_lib = xyes; then
+    if test x$have_history_hdr = xyes -a x$have_history_lib = xyes; then
+      XQFRCON="xqf-rcon";
+      AC_SUBST(XQFRCON)
+      XQFRCON_LIBS="-lreadline"
+      AC_SUBST(XQFRCON_LIBS)
+    else
+      AC_MSG_NOTICE(libreadline not found, rcon program disabled)
+    fi
+  else
+    AC_MSG_NOTICE(libreadline not found, rcon program disabled)
+  fi
+fi
+
 
 dnl check if user wants bzip2 compression instead of gzip
 COMPRESSION="-DCOMPRESSOR_GZIP"
