@@ -21,10 +21,9 @@
 #include <sys/types.h>
 #include <string.h>	/* strlen, strstr, strcpy */
 
-#include <gtk/gtk.h>
-
 #include "i18n.h"
 #include "game.h"
+#include "xqf-ui.h"
 #include "history.h"
 #include "dialogs.h"
 #include "utils.h"
