@@ -26,10 +26,8 @@
 #include <arpa/inet.h>	/* inet_ntoa */
 
 
-#include <gtk/gtk.h>
-
 #include "i18n.h"
-#include "xqf.h"
+#include "xqf-ui.h"
 #include "game.h"
 #include "pref.h"
 #include "server.h"
